@@ -1,3 +1,8 @@
+2005-03-16 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* zebra.h: Must check whether __attribute__ should be defined before
+	  including zassert.h.
+
 2005-03-14 Paul Jakma <paul.jakma@sun.com>
 
 	* command.c: (sort_node) use vector_max instead of referencing 
